feat(web): 重构前端为 Vue 3 + Vite 单页应用并优化启动脚本
- 将原有基于静态文件的 Web 应用重构为 Vue 3 + Vite 单页应用
- 添加 Vue Router、Pinia、Tailwind CSS 等现代前端工具链
- 重构启动脚本支持开发/生产双模式，开发时同时启动 API 和前端开发服务器
- 更新停止脚本以按端口精准停止服务，避免误杀其他 Node 进程
- 添加 Dockerfile 支持容器化部署
- 保留后端 API 逻辑，仅重构前端架构

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 # Node.js
 node_modules/
+logs/
+*.log
 npm-debug.log
 yarn-error.log
+pnpm-debug.log*
+lerna-debug.log*
 
 # Python
 __pycache__/
@@ -10,12 +14,25 @@ __pycache__/
 venv/
 .env
 .env.local
+*.local
 
 # IDE
 .vscode/
 .idea/
 .trae/
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 # Project Specific
 tool/yaml2pg/node/node_modules/
 tool/yaml2pg/.env
+tool/yaml2pg/web/node_modules/
+tool/yaml2pg/web/client/node_modules/
+tool/yaml2pg/web/dist/
+tool/yaml2pg/web/dist-ssr/
+tool/yaml2pg/web/config.json
+tool/yaml2pg/web/data/local_words.json
